# Crusty-Crawler

./: .gitignore  Cargo.toml  README.md  build-package.ps1  build-package.sh  crwlr.ps1  crwlr.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
public/: index.html
src/: auth.rs  cli.rs  components.rs  disks.rs  hardware_statistics.rs  main.rs  network.rs
